--- a/static/css/login.css
+++ b/static/css/login.css
@@ -52,7 +52,7 @@ html, body{
     font-size: 18px;
     font-family: sans-serif;
     position: relative;
-    left: 13.438rem;
+    left: 40%;
 }
 .username-line{
     border-top: 2px solid white;
