--- a/static/css/login.css
+++ b/static/css/login.css
@@ -12,14 +12,19 @@ html, body{
     height: 60%;
     background: rgba(255, 255, 255, 0.2);
     margin: 0 auto;
-    margin-top: 10%;
+    margin-top: 9%;
 }
 .logo-container{
     background: url("/static/images/logo.png");
-    width: 15rem;
-    height: 12.5rem;
+    width: 46%;
+    height: 50%;
     background-size: 240px auto;
     margin: 0 auto;
+}
+.form{
+    position: relative;
+    top: 50%;
+    height: 40%;
 }
 #username{
     width: 100%;
@@ -28,7 +33,7 @@ html, body{
     outline: transparent;
     height: 3.75rem;
     position: relative;
-    top: 1.25rem;
+    top: 20%;
     font-size: 20px;
     text-align: center;
 }
@@ -39,7 +44,7 @@ html, body{
     outline: transparent;
     height: 3.75rem;
     position: relative;
-    top: 1.25rem;
+    top: 20%;
     font-size: 20px;
     text-align: center;
 }
@@ -52,7 +57,8 @@ html, body{
     font-size: 18px;
     font-family: sans-serif;
     position: relative;
-    left: 40%;
+    left: 30%;
+    top: 131%;
 }
 .username-line{
     border-top: 2px solid white;
