--- a/static/css/login.css
+++ b/static/css/login.css
@@ -10,7 +10,7 @@ html, body{
 .login-wrapper {
     width: 30%;
     height: 60%;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.5);
     margin: 0 auto;
     margin-top: 9%;
 }
@@ -22,18 +22,20 @@ html, body{
     margin: 0 auto;
 }
 .form{
-    position: relative;
+    position: absolute;
     top: 50%;
+    left: 44%;
     height: 40%;
+    width: 13.1%;
 }
 #username{
     width: 100%;
     background: transparent;
     border: transparent;
     outline: transparent;
-    height: 3.75rem;
-    position: relative;
-    top: 20%;
+    height: 11%;
+    position: absolute;
+    top: -20%;
     font-size: 20px;
     text-align: center;
 }
@@ -42,9 +44,9 @@ html, body{
     background: transparent;
     border: transparent;
     outline: transparent;
-    height: 3.75rem;
-    position: relative;
-    top: 20%;
+    height: 11%;
+    position: absolute;
+    top: -4%;
     font-size: 20px;
     text-align: center;
 }
@@ -56,15 +58,19 @@ html, body{
     border: 2px solid black;
     font-size: 18px;
     font-family: sans-serif;
-    position: relative;
-    left: 30%;
-    top: 131%;
+    position: absolute;
+    left: 47.9%;
+    top: 55%;
 }
 .username-line{
     border-top: 2px solid white;
     width: 15.625rem;
+    position: absolute;
+    top: -12%;
 }
 .password-line{
     border-top: 2px solid white;
     width: 15.625rem;
+    position: absolute;
+    top: 4%;
 }
