--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <div class="grid-container">
       <div class="login-wrapper">
         <div class="logo-container"></div>
         <form action="" class="form" id="login-form" method="POST">
@@ -35,6 +36,7 @@
           value="Logga In"
         />
       </div>
+    </div>
   </body>
 </html>
 
