--- a/static/css/login.css
+++ b/static/css/login.css
@@ -2,15 +2,12 @@ html,
 body {
   height: 100%;
 }
-body{
-  background: url("/static/images/backgroundCastle.jpg");
-}
 @media (min-width: 1440px) {
-  .flex-container {
+  .grid-container {
     width: 100%;
     height: 100%;
     background: url("/static/images/backgroundCastle.jpg");
-    display: flex;
+    display: grid;
   }
   .login-wrapper {
     width: 30%;
