--- a/static/css/login.css
+++ b/static/css/login.css
@@ -10,25 +10,27 @@ body {
     display: grid;
   }
   .login-wrapper {
-    width: 30%;
-    height: 60%;
+    wwidth: 600px;
+    height: 620px;
     background: rgba(255, 255, 255, 0.5);
     margin: 0 auto;
-    margin-top: 9%;
+    margin-top: 150px;
   }
   .logo-container {
     background: url("/static/images/logo.png");
-    width: 41%;
-    height: 50%;
-    background-size: 240px auto;
-    margin: 0 auto;
+    width: 250px;
+    height: 250px;
+    background-size: 250px auto;
+    position: relative;
+    left: 31%;
+    top: 40px;
   }
   .form {
     position: relative;
-    top: 50%;
-    left: 44%;
+    top: 20%;
+    left: 31%;
     height: 40%;
-    width: 13.1%;
+    width: 250px;
   }
   #username {
     width: 100%;
@@ -37,7 +39,7 @@ body {
     outline: transparent;
     height: 11%;
     position: relative;
-    top: -20%;
+    top: -10%;
     font-size: 20px;
     text-align: center;
   }
@@ -48,32 +50,32 @@ body {
     outline: transparent;
     height: 11%;
     position: relative;
-    top: -4%;
+    top: -9%;
     font-size: 20px;
     text-align: center;
   }
   .login-button {
     border-radius: 15px;
-    width: 6.25rem;
-    height: 3.125rem;
+    width: 105px;
+    height: 45px;
     background: white;
     border: 2px solid black;
     font-size: 18px;
     font-family: sans-serif;
     position: relative;
-    left: 47.9%;
-    top: 55%;
+    left: 43%;
+    top: 1%;
   }
   .username-line {
     border-top: 2px solid white;
-    width: 15.625rem;
+    width: 255px;
     position: relative;
     top: -12%;
   }
   .password-line {
     border-top: 2px solid white;
-    width: 15.625rem;
+    width: 255px;
     position: relative;
-    top: 4%;
+    top: -15%;
   }
 }
