--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="grid-container">
+    <div class="flex-container">
       <div class="login-wrapper">
         <div class="logo-container"></div>
         <form action="" class="form" id="login-form" method="POST">
