--- a/static/css/login.css
+++ b/static/css/login.css
@@ -3,11 +3,11 @@ body {
   height: 100%;
 }
 @media (min-width: 1440px) {
-  .grid-container {
+  .flex-container {
     width: 100%;
     height: 100%;
     background: url("/static/images/backgroundCastle.jpg");
-    display: grid;
+    display: flex;
   }
   .login-wrapper {
     width: 600px;
