--- a/static/css/login.css
+++ b/static/css/login.css
@@ -2,7 +2,7 @@ html,
 body {
   height: 100%;
 }
-@media only screen and (max-width: 375px){
+@media only screen and (min-width: 375px){
   .flex-container {
     width: 100%;
     height: 100%;
