--- a/static/css/login.css
+++ b/static/css/login.css
@@ -19,19 +19,16 @@ body {
   }
   .logo-container {
     background: url("/static/images/logo.png");
-    width: 250px;
-    height: 250px;
-    background-size: 250px auto;
-    position: relative;
-    left: 20%;
-    top: 40px;
+    width: 620px;
+    height: 620px;
+    background: rgba(255, 255, 255, 0.5);
+    margin: 0 auto;
+    margin-top: 150px;
   }
   .form {
-    position: relative;
-    top: 10%;
-    left: 19%;
     height: 40%;
     width: 250px;
+    margin: 0 auto;
   }
   #username {
     width: 100%;
@@ -63,10 +60,9 @@ body {
     border: 2px solid black;
     font-size: 18px;
     font-family: sans-serif;
-    position: relative;
-    left: 38%;
-    top: -15%;
-  }
+    margin-left: 30%;
+}
+  
   .username-line {
     border-top: 2px solid white;
     width: 255px;
@@ -90,7 +86,7 @@ body {
     background-position-x: center;
   }
   .login-wrapper {
-    width: 600px;
+    width: 620px;
     height: 620px;
     background: rgba(255, 255, 255, 0.5);
     margin: 0 auto;
@@ -101,16 +97,12 @@ body {
     width: 250px;
     height: 250px;
     background-size: 250px auto;
-    position: relative;
-    left: 31%;
-    top: 40px;
+    margin: 0 auto;
   }
   .form {
-    position: relative;
-    top: 10%;
-    left: 31%;
     height: 40%;
     width: 250px;
+    margin: 0 auto;
   }
   #username {
     width: 100%;
@@ -142,9 +134,8 @@ body {
     border: 2px solid black;
     font-size: 18px;
     font-family: sans-serif;
-    position: relative;
-    left: 44%;
-    top: -15%;
+    margin: 0 auto;
+    margin-left: 30%;
   }
   .username-line {
     border-top: 2px solid white;
@@ -169,7 +160,7 @@ body {
     background-position-x: center;
   }
   .login-wrapper {
-    width: 600px;
+    width: 620px;
     height: 620px;
     background: rgba(255, 255, 255, 0.5);
     margin: 0 auto;
@@ -180,16 +171,11 @@ body {
     width: 250px;
     height: 250px;
     background-size: 250px auto;
-    position: relative;
-    left: 31%;
-    top: 40px;
   }
   .form {
-    position: relative;
-    top: 10%;
-    left: 31%;
     height: 40%;
     width: 250px;
+    margin: 0 auto;
   }
   #username {
     width: 100%;
@@ -221,9 +207,7 @@ body {
     border: 2px solid black;
     font-size: 18px;
     font-family: sans-serif;
-    position: relative;
-    left: 44%;
-    top: -15%;
+    margin-left: 30%;
   }
   .username-line {
     border-top: 2px solid white;
