--- a/static/css/login.css
+++ b/static/css/login.css
@@ -17,14 +17,11 @@ body {
     margin: 0 auto;
     margin-top: 150px;
   }
-  
   .logo-container {
     background: url("/static/images/logo.png");
-    width: 620px;
-    height: 620px;
-    background: rgba(255, 255, 255, 0.5);
-    margin: 0 auto;
-    margin-top: 150px;
+    width: 250px;
+    height: 250px;
+    background-size: 250px auto;
   }
   .form {
     height: 40%;
@@ -93,14 +90,11 @@ body {
     margin: 0 auto;
     margin-top: 150px;
   }
-  
   .logo-container {
     background: url("/static/images/logo.png");
-    width: 620px;
-    height: 620px;
-    background: rgba(255, 255, 255, 0.5);
-    margin: 0 auto;
-    margin-top: 150px;
+    width: 250px;
+    height: 250px;
+    background-size: 250px auto;
   }
   .form {
     height: 40%;
@@ -172,12 +166,11 @@ body {
   
   .logo-container {
     background: url("/static/images/logo.png");
-    width: 620px;
-    height: 620px;
-    background: rgba(255, 255, 255, 0.5);
-    margin: 0 auto;
-    margin-top: 150px;
+    width: 250px;
+    height: 250px;
+    background-size: 250px auto;
   }
+   
   .form {
     height: 40%;
     width: 250px;
