--- a/static/css/login.css
+++ b/static/css/login.css
@@ -22,6 +22,7 @@ body {
     width: 250px;
     height: 250px;
     background-size: 250px auto;
+    margin: 0 auto;
   }
   .form {
     height: 40%;
@@ -95,6 +96,7 @@ body {
     width: 250px;
     height: 250px;
     background-size: 250px auto;
+    margin: 0 auto;
   }
   .form {
     height: 40%;
@@ -169,6 +171,7 @@ body {
     width: 250px;
     height: 250px;
     background-size: 250px auto;
+    margin: 0 auto;
   }
    
   .form {
