--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -12,7 +12,7 @@
     <div class="flex-container">
       <div class="login-wrapper">
         <div class="logo-container"></div>
-        <form action="" class="form" id="login-form" method="POST">
+        <form action="" class="form" id="login-form" method="POST" autocomplete="off">
           {% csrf_token %}
           <input
             id="username"
