--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" href="{% static 'css/DesktopHeader.css' %}">
+<link rel="stylesheet" href="{% static 'css/header.css' %}">
 </head>
 
 <nav class="navbar-portal">
