--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" href="{% static 'css/DesktopPortal.css' %}">
+<link rel="stylesheet" href="{% static 'css/portal.css' %}">
 </head>
 <body>
   <div class="grid-container">
