--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -12,7 +12,13 @@
     <div class="flex-container">
       <div class="login-wrapper">
         <div class="logo-container"></div>
-        <form action="" class="form" id="login-form" method="POST" autocomplete="off">
+        <form
+          action=""
+          class="form"
+          id="login-form"
+          method="POST"
+          autocomplete="off"
+        >
           {% csrf_token %}
           <input
             id="username"
@@ -35,6 +41,15 @@
             value="Logga In"
           />
         </form>
+        {% if messages %}
+        <ul class="messages">
+          {% for message in messages %}
+          <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
+            {{ message }}
+          </li>
+          {% endfor %}
+        </ul>
+        {% endif %}
       </div>
     </div>
   </body>
