--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -41,13 +41,9 @@
             value="Logga In"
           />
           {% if messages %}
-          <ul class="messages">
             {% for message in messages %}
-            <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
-              {{ message }}
-            </li>
+            <div class="messages">{{ message }}</div>
             {% endfor %}
-          </ul>
           {% endif %}
         </form>
       </div>
