--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -41,7 +41,9 @@
             value="Logga In"
           />
         </form>
-        {{ form.user.errors }}
+        {% for message in messages %}
+        <div class="messages">{{ message }}</div>
+        {% endfor %}
       </div>
     </div>
   </body>
