--- a/portalen/templates/portalen/loginbase.html
+++ b/portalen/templates/portalen/loginbase.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="shortcut icon" href="#" />
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Logga In - Casatorportalen</title>
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 </head>
