--- a/static/css/header.css
+++ b/static/css/header.css
@@ -84,19 +84,19 @@
   .container {
     background: url("/static/images/logo-no-text.png");
     background-size: 80% auto;
-    position: absolute;
+    position: relative;
     width: 100.67px;
     height: 99.29px;
-    left: 13px;
+    left: -372px;
     top: -2px;
     background-repeat: no-repeat;
   }
   .title {
-    position: absolute;
+    position: relative;
     width: 119.02px;
     height: 19.38px;
-    left: 93px;
-    top: 30.91px;
+    left: 78px;
+    top: -68.09px;
     font-style: normal;
     font-weight: 600;
     font-size: 23px;
@@ -104,11 +104,11 @@
     color: #121212;
   }
   .logout-container {
-    position: absolute;
+    position: relative;
     width: 184px;
     height: 80px;
-    left: 649px;
-    top: -3px;
+    left: 638px;
+    top: -126px;
   }
   .logout-icon {
     position: absolute;
@@ -154,19 +154,19 @@
   .container {
     background: url("/static/images/logo-no-text.png");
     background-size: 80% auto;
-    position: absolute;
+    position: relative;
     width: 100.67px;
     height: 99.29px;
-    left: 237px;
+    left: -433px;
     top: -2px;
     background-repeat: no-repeat;
   }
   .title {
-    position: absolute;
+    position: relative;
     width: 119.02px;
     height: 19.38px;
     left: 319px;
-    top: 31.91px;
+    top: -67.09px;
     font-style: normal;
     font-weight: 600;
     font-size: 23px;
@@ -174,11 +174,11 @@
     color: #121212;
   }
   .logout-container {
-    position: absolute;
+    position: relative;
     width: 184px;
     height: 80px;
     left: 973px;
-    top: 0px;
+    top: -127px;
     background: #f7f7f7;
   }
   .logout-icon {
