--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -608,6 +608,30 @@
           aria-haspopup="true"
           aria-expanded="false"
         >
+        <svg
+            class="svg2"
+            width="19"
+            height="34"
+            viewBox="0 0 19 34"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M9.58492 1.76001V32.208"
+              stroke="white"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M16.5049 7.29602H6.12491C4.84021 7.29602 3.60812 7.80637 2.69969 8.7148C1.79126 9.62322 1.28091 10.8553 1.28091 12.14C1.28091 13.4247 1.79126 14.6568 2.69969 15.5652C3.60812 16.4737 4.84021 16.984 6.12491 16.984H13.0449C14.3296 16.984 15.5617 17.4944 16.4701 18.4028C17.3786 19.3112 17.8889 20.5433 17.8889 21.828C17.8889 23.1127 17.3786 24.3448 16.4701 25.2532C15.5617 26.1617 14.3296 26.672 13.0449 26.672H1.28091"
+              stroke="white"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+          
           Indexuppräkningar och Kostnadsberäkningar
         </button>
         <div class="dropdown-menu">
