Fix text in buttons

--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -631,8 +631,7 @@
               stroke-linejoin="round"
             />
           </svg>
-          
-          Indexuppräkningar och Kostnadsberäkningar
+          <p class="button-text">Indexuppräkningar och Kostnadsberäkningar</p>
         </button>
         <div class="dropdown-menu">
           <ul>
