--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -49,7 +49,7 @@
             />
           </svg>
 
-          Reklam / PR / Trycksaker
+          <p class="button-text">Reklam / PR / Trycksaker</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -126,7 +126,7 @@
             />
           </svg>
 
-          Ekonomi och Bokföring
+          <p class="button-text">Ekonomi och Bokföring</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -169,7 +169,7 @@
             />
           </svg>
 
-          Förbrukningsmaterial och Kontor
+          <p class="button-text">Förbrukningsmaterial och Kontor</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -240,7 +240,7 @@
             />
           </svg>
 
-          Dokumentation och Avvikelser
+          <p class="button-text">Dokumentation och Avvikelser</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -290,7 +290,7 @@
             />
           </svg>
 
-          Tidsrapportering och Schema
+          <p class="button-text">Tidsrapportering och Schema</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -383,7 +383,7 @@
             />
           </svg>
 
-          Telefon, Internet och Webmail
+          <p class="button-text">Telefon, Internet och Webmail</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -451,7 +451,7 @@
             />
           </svg>
 
-          Digitala Möten
+          <p class="button-text">Digitala Möten</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -515,7 +515,7 @@
             />
           </svg>
 
-          Löner och Personal
+          <p class="button-text">Löner och Personal</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -555,7 +555,7 @@
             />
           </svg>
 
-          Upphandlingar och Ramavtal
+          <p class="button-text">Upphandlingar och Ramavtal</p>
         </button>
         <div class="dropdown-menu">
           <ul>
