Fix button text

--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -49,7 +49,7 @@
             />
           </svg>
 
-          <p class="button-text">Reklam / PR / Trycksaker</p>
+          <p class="button-text1">Reklam / PR / Trycksaker</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -126,7 +126,7 @@
             />
           </svg>
 
-          <p class="button-text">Ekonomi och Bokföring</p>
+          <p class="button-text2">Ekonomi och Bokföring</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -169,7 +169,7 @@
             />
           </svg>
 
-          <p class="button-text">Förbrukningsmaterial och Kontor</p>
+          <p class="button-text3">Förbrukningsmaterial och Kontor</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -240,7 +240,7 @@
             />
           </svg>
 
-          <p class="button-text">Dokumentation och Avvikelser</p>
+          <p class="button-text4">Dokumentation och Avvikelser</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -290,7 +290,7 @@
             />
           </svg>
 
-          <p class="button-text">Tidsrapportering och Schema</p>
+          <p class="button-text5">Tidsrapportering och Schema</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -383,7 +383,7 @@
             />
           </svg>
 
-          <p class="button-text">Telefon, Internet och Webmail</p>
+          <p class="button-text6">Telefon, Internet och Webmail</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -451,7 +451,7 @@
             />
           </svg>
 
-          <p class="button-text">Digitala Möten</p>
+          <p class="button-text7">Digitala Möten</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -515,7 +515,7 @@
             />
           </svg>
 
-          <p class="button-text">Löner och Personal</p>
+          <p class="button-text8">Löner och Personal</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -555,7 +555,7 @@
             />
           </svg>
 
-          <p class="button-text">Upphandlingar och Ramavtal</p>
+          <p class="button-text9">Upphandlingar och Ramavtal</p>
         </button>
         <div class="dropdown-menu">
           <ul>
@@ -631,7 +631,7 @@
               stroke-linejoin="round"
             />
           </svg>
-          <p class="button-text">Indexuppräkningar och Kostnadsberäkningar</p>
+          <p class="button-text10">Indexuppräkningar och Kostnadsberäkningar</p>
         </button>
         <div class="dropdown-menu">
           <ul>
