--- a/static/css/portal.css
+++ b/static/css/portal.css
@@ -15,91 +15,147 @@
     height: 705px;
     margin: 25px auto;
   }
+
   .item1 {
     left: 20px;
     top: 0px;
   }
   .svg1 {
     position: absolute;
-    left: 60px;
-    top: 10px;
+    left: 108px;
+    top: 20px;
   }
+  .button-text1 {
+    position: absolute;
+    left: 25px;
+    top: 80px;
+  }
+
   .item2 {
     left: 195px;
     top: 0px;
   }
   .svg2 {
     position: absolute;
-    left: 60px;
-    top: 10px;
+    left: 115px;
+    top: 20px;
   }
+  .button-text2 {
+    position: absolute;
+    top: 80px;
+    left: 30px;
+  }
+
   .item3 {
     left: 12px;
     top: 150px;
   }
   .svg3 {
     position: absolute;
-    left: 60px;
-    top: 10px;
+    left: 110px;
+    top: 20px;
   }
+  .button-text3 {
+    position: absolute;
+    top: 70px;
+  }
+
   .item4 {
     left: 186px;
     top: 150px;
   }
   .svg4 {
     position: absolute;
-    left: 60px;
-    top: 10px;
+    left: 110px;
+    top: 20px;
   }
+  .button-text4 {
+    position: absolute;
+    left: 41px;
+    width: 160px;
+  }
+
   .item5 {
     left: 4px;
     top: 300px;
   }
   .svg5 {
     position: absolute;
-    left: 60px;
-    top: 10px;
+    left: 110px;
+    top: 20px;
   }
+  .button-text5 {
+    position: absolute;
+    top: 80px;
+  }
+
   .item6 {
     left: 177px;
     top: 300px;
   }
   .svg6 {
     position: absolute;
-    left: 60px;
-    top: 10px;
+    left: 110px;
+    top: 20px;
   }
+  .button-text6 {
+    position: absolute;
+    top: 80px;
+  }
+
   .item7 {
     left: -4px;
     top: 450px;
   }
   .svg7 {
     position: absolute;
-    left: 60px;
-    top: 10px;
+    left: 110px;
+    top: 20px;
   }
+  .button-text7 {
+    position: absolute;
+    top: 80px;
+    left: 67px;
+  }
+
   .item8 {
     left: 169px;
     top: 450px;
   }
   .svg8 {
     position: absolute;
-    left: 60px;
-    top: 10px;
+    left: 110px;
+    top: 20px;
   }
+  .button-text8 {
+    position: absolute;
+    top: 80px;
+    left: 50px;
+  }
+
   .item9 {
     left: -13px;
     top: 600px;
   }
   .svg9 {
     position: absolute;
-    left: 53px;
-    top: 10px;
-    height: 30px;
+    left: 110px;
+    top: 20px;
   }
+  .button-text9 {
+    position: absolute;
+    top: 74px;
+    left: 53px;
+    width: 153px;
+  }
+
   .item10 {
     left: 160px;
     top: 600px;
+  }
+  .button-text10 {
+    position: absolute;
+    left: 10px;
   }
 }
 
