--- a/static/css/portal.css
+++ b/static/css/portal.css
@@ -5,7 +5,7 @@
     position: absolute;
     background: #ae2718;
     font-style: normal;
-    font-size: 11px;
+    font-size: 12px;
     text-align: center;
     color: #ffffff;
     border: 1px solid white;
@@ -22,12 +22,12 @@
   }
   .svg1 {
     position: absolute;
-    left: 108px;
+    left: 62px;
     top: 20px;
   }
   .button-text1 {
     position: absolute;
-    left: 25px;
+    left: 10px;
     top: 80px;
   }
 
@@ -37,13 +37,13 @@
   }
   .svg2 {
     position: absolute;
-    left: 115px;
+    left: 66px;
     top: 20px;
   }
   .button-text2 {
     position: absolute;
     top: 80px;
-    left: 30px;
+    left: 12px;
   }
 
   .item3 {
@@ -52,12 +52,13 @@
   }
   .svg3 {
     position: absolute;
-    left: 110px;
+    left: 62px;
     top: 20px;
   }
   .button-text3 {
     position: absolute;
     top: 70px;
+    left: 0px;
   }
 
   .item4 {
@@ -66,12 +67,12 @@
   }
   .svg4 {
     position: absolute;
-    left: 110px;
+    left: 64px;
     top: 20px;
   }
   .button-text4 {
     position: absolute;
-    left: 41px;
+    left: -5px;
     width: 160px;
   }
 
@@ -81,12 +82,13 @@
   }
   .svg5 {
     position: absolute;
-    left: 110px;
+    left: 62px;
     top: 20px;
   }
   .button-text5 {
     position: absolute;
-    top: 80px;
+    top: 70px;
+    left: 0px;
   }
 
   .item6 {
@@ -95,12 +97,13 @@
   }
   .svg6 {
     position: absolute;
-    left: 110px;
+    left: 61px;
     top: 20px;
   }
   .button-text6 {
     position: absolute;
-    top: 80px;
+    top: 70px;
+    left: 1px;
   }
 
   .item7 {
@@ -109,13 +112,13 @@
   }
   .svg7 {
     position: absolute;
-    left: 110px;
+    left: 62px;
     top: 20px;
   }
   .button-text7 {
     position: absolute;
-    top: 80px;
-    left: 67px;
+    top: 70px;
+    left: 35px;
   }
 
   .item8 {
@@ -124,13 +127,13 @@
   }
   .svg8 {
     position: absolute;
-    left: 110px;
+    left: 62px;
     top: 20px;
   }
   .button-text8 {
     position: absolute;
-    top: 80px;
-    left: 50px;
+    top: 70px;
+    left: 26px;
   }
 
   .item9 {
@@ -139,13 +142,14 @@
   }
   .svg9 {
     position: absolute;
-    left: 110px;
-    top: 20px;
+    left: 59px;
+    top: 17px;
+    width: 35px;
   }
   .button-text9 {
     position: absolute;
     top: 74px;
-    left: 53px;
+    left: 1px;
     width: 153px;
   }
 
@@ -155,7 +159,7 @@
   }
   .button-text10 {
     position: absolute;
-    left: 10px;
+    left: 3px;
   }
 }
 
